--- a/Styles/index.css
+++ b/Styles/index.css
@@ -10,6 +10,10 @@
     text-decoration: none;
 }
 
+h1,h2,h3,h4,h5,h6 {
+    line-height: .8;
+}
+
 p,a {
     font-size: .9em;
     line-height: 1.4;
