--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,13 +1,15 @@
-@font-face{
-    font-family: 'isFont';
-    src: url("/Asset/Montserrat-Regular.ttf")
-}
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
+@font-face{ font-family: 'isFont'; src: url("/Asset/Montserrat-Regular.ttf")}
 
 * {
     margin: 0;
     padding: 0;
     font-family: 'isFont';
     text-decoration: none;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 h1,h2,h3,h4,h5,h6 {
