--- a/Styles/page1/section2.css
+++ b/Styles/page1/section2.css
@@ -14,6 +14,10 @@
     width: 15em;
     background: red;
 }
+.section2 .div1 img {
+    height: 25em;
+    width: 15em;
+}
 
 /* DIV2 */
 .section2 .div2 {
